(AC_INIT): Bump version to 1.7.0. (BOOST_REQUIRE): Require boost >= 1.41. Require libxml2 >= 0.25.

--- a/configure.ac
+++ b/configure.ac
@@ -1,18 +1,11 @@
-
-AC_PREREQ([2.59])
-
-#
-#
-AC_INIT([dlvhex-xpathplugin],[0.2.0],[daniel.scheikl@student.tuwien.ac.at])
-
-# this refers to one of the sources, change it if you renamed the file
+AC_PREREQ([2.61])
+AC_INIT([dlvhex-xpathplugin],[1.7.0],[weinma@me.com])
 AC_CONFIG_SRCDIR([src/xpathplugin.cpp])
-
 AC_CONFIG_HEADER([src/config.h])
 
-MAJOR=`echo $PACKAGE_VERSION | sed "s/^\([[0-9]]*\).\([[0-9]]*\).\([[0-9]]*\)/\1/"`
-MINOR=`echo $PACKAGE_VERSION | sed "s/^\([[0-9]]*\).\([[0-9]]*\).\([[0-9]]*\)/\2/"`
-MICRO=`echo $PACKAGE_VERSION | sed "s/^\([[0-9]]*\).\([[0-9]]*\).\([[0-9]]*\)/\3/"`
+MAJOR=`echo $PACKAGE_VERSION | sed "s,^\([[0-9]]*\)\.\([[0-9]]*\)\.\([[0-9]]*\).*,\1,"`
+MINOR=`echo $PACKAGE_VERSION | sed "s,^\([[0-9]]*\)\.\([[0-9]]*\)\.\([[0-9]]*\).*,\2,"`
+MICRO=`echo $PACKAGE_VERSION | sed "s,^\([[0-9]]*\)\.\([[0-9]]*\)\.\([[0-9]]*\).*,\3,"`
 
 # user corresponding names and texts here
 AC_DEFINE_UNQUOTED([XPATH_MAJOR], [$MAJOR], [Major version number of the XPath-plugin])
@@ -23,8 +16,9 @@ AC_DEFINE_UNQUOTED([XPATH_MICRO], [$MICRO], [Micro version number of the XPath-p
 AM_INIT_AUTOMAKE
 
 # Checks for programs.
-AC_PROG_CXX
 AC_PROG_CC
+AC_PROG_CXX
+AC_PROG_CXXCPP
 
 # Checks for header files.
 AC_HEADER_DIRENT
@@ -34,8 +28,9 @@ AC_CHECK_HEADERS([sys/param.h])
 AC_HEADER_STDBOOL
 AC_C_CONST
 
-# Checks for library functions.
-AC_LIBTOOL_DLOPEN
+# Checks for libtool library functions.
+AC_LIBTOOL_WIN32_DLL # enable win32 dll-building support
+AC_LIBTOOL_DLOPEN # we build a module library
 AC_DISABLE_STATIC # we don't need a static library
 AC_PROG_LIBTOOL
 
@@ -44,17 +39,34 @@ AC_PROG_LIBTOOL
 #
 
 #check for XERCES
-AC_CHECK_HEADERS([xercesc/util/XercesVersion.hpp],,AC_MSG_ERROR([can't find Xerces for C++ header files]))
-AC_CHECK_LIB([xerces-c],[main],,AC_MSG_ERROR([can't find Xerces for C++ library]))
+#AC_CHECK_HEADERS([xercesc/util/XercesVersion.hpp],,AC_MSG_ERROR([can't find Xerces for C++ header files]))
+#AC_CHECK_LIB([xerces-c],[main],,AC_MSG_ERROR([can't find Xerces for C++ library]))
 
 #check for XALAN
-AC_CHECK_HEADERS([xalanc/Include/XalanVersion.hpp],,AC_MSG_ERROR([can't find Xalan for C++ header files]))
-AC_CHECK_LIB([xalan-c],[main],,AC_MSG_ERROR([can't find Xalan for C++ library]))
+#AC_CHECK_HEADERS([xalanc/Include/XalanVersion.hpp],,AC_MSG_ERROR([can't find Xalan for C++ header files]))
+#AC_CHECK_LIB([xalan-c],[main],,AC_MSG_ERROR([can't find Xalan for C++ library]))
 
 #
 # of course we need dlvhex itself!
 #
-PKG_CHECK_MODULES([DLVHEX], [dlvhex >= 1.4])
+PKG_CHECK_MODULES([DLVHEX], [dlvhex >= 1.7])
+
+# we want libxml2
+PKG_CHECK_MODULES([LIBXML2], [libxml-2.0 >= 0.25])
+
+# cppunit is optional -> give warning in ACTION-IF-NOT-FOUND
+PKG_CHECK_MODULES([CPPUNIT], [cppunit >= 1.12.0], [have_cppunit=true], [have_cppunit=false])
+if test x$have_cppunit = xfalse; then
+   AC_MSG_WARN([could not find cppunit >= 1.12.0, `make check' will fail. Please download it from http://cppunit.sourceforge.net/ and setup PKG_CONFIG_PATH appropriately.])
+fi
+
+
+# checking for boost libs
+BOOST_REQUIRE([1.41.0])
+
+BOOST_SMART_PTR
+BOOST_STRING_ALGO
+BOOST_TOKENIZER
 
 #
 # where the plugin will be installed by default.
@@ -81,6 +93,11 @@ DX_XML_FEATURE([OFF])
 DX_PDF_FEATURE([OFF])
 DX_PS_FEATURE([OFF])
 DX_INIT_DOXYGEN([dlvhexxpathplugin], [doxygen.cfg], [documentation])
+
+#
+# set system-wide plugin dir
+#
+CPPFLAGS="$CPPFLAGS -DPLUGIN_DIR='\"\$(dlvhexlibdir)\"'"
 
 #
 # all needed makefiles
