Refactoring XPath-Plugin: * Seperated classed in hpp and cpp files * get the plugin up-to-date (some interface changes) * tests working again

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -8,7 +8,8 @@ plugin_LTLIBRARIES = libdlvhexxpath.la
 # add all sources of your plugin
 #
 libdlvhexxpath_la_SOURCES =	xpathplugin.cpp \
-										myerrorhandler.cpp
+				myerrorhandler.cpp \
+				xpathatom.cpp
 
 #
 # extend compiler flags by CFLAGS of other needed libraries
