Add LIBXML2_CFLAGS and LIBXML2_LIBS.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -17,6 +17,7 @@ libdlvhexxpath_la_SOURCES =	xpathplugin.cpp \
 AM_CPPFLAGS = \
 	-I$(top_srcdir)/include \
 	$(DLVHEX_CFLAGS) \
+	$(LIBXML2_CFLAGS) \
 	-l/opt/local/include/xercesc \
    -l/opt/local/include/xalanc 
 
@@ -26,6 +27,7 @@ AM_CPPFLAGS = \
 # add other needed libs to linker flags if necessary
 #
 libdlvhexxpath_la_LDFLAGS = -avoid-version -module \
+	$(LIBXML2_LIBS) \
 										-lxerces-c \
 										-lxalan-c \
 										-lxalanMsg
