--- a/Makefile.am
+++ b/Makefile.am
@@ -4,12 +4,13 @@ ACLOCAL_AMFLAGS = -I m4
 include doxygen.am
 
 SUBDIRS = \
-          src/ \
-          examples/ \
-	  include/
+	src \
+	testsuite \
+        examples \
+	include
 
 EXTRA_DIST = \
-			 doxygen.am \
-			 doxygen.cfg
+	doxygen.am \
+	doxygen.cfg
 
 MOSTLYCLEANFILES = $(DX_CLEANFILES)
