(AM_CPPFLAGS): Add BOOST_CPPFLAGS. (noinst_LTLIBRARIES): Build a non-module libdlvhexxpath-test.la library.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -1,29 +1,30 @@
 #
-# replace 'plugin' on the right side by your plugin's name
+# create libtool libraries for the plugin and for local tests
 #
 plugin_LTLIBRARIES = libdlvhexxpath.la
+noinst_LTLIBRARIES = libdlvhexxpath-test.la
 
 #
-# replace 'plugin' on the left side as above and
-# add all sources of your plugin
+# add all sources of xpath plugin and test library
 #
-libdlvhexxpath_la_SOURCES =	xpathplugin.cpp \
-				xpathatom.cpp
+libdlvhexxpath_la_SOURCES = xpathplugin.cpp xpathatom.cpp
+libdlvhexxpath_test_la_SOURCES = xpathplugin.cpp xpathatom.cpp
 
 #
 # extend compiler flags by CFLAGS of other needed libraries
 #
 AM_CPPFLAGS = \
 	-I$(top_srcdir)/include \
+	$(BOOST_CPPFLAGS) \
 	$(DLVHEX_CFLAGS) \
 	$(LIBXML2_CFLAGS)
 
 #
-# replace 'plugin' on the left side as above and
 # add other needed libs to linker flags if necessary
 #
-
 libdlvhexxpath_la_LDFLAGS = -avoid-version -module \
 			$(LIBXML2_LIBS) 
+
+libdlvhexxpath_test_la_LDFLAGS = $(LIBXML2_LIBS) 
 
 
