--- a/testsuite/Makefile.am
+++ b/testsuite/Makefile.am
@@ -10,17 +10,18 @@ EXTRA_DIST = \
 AM_CPPFLAGS = \
     -I$(top_srcdir)/include \
     $(BOOST_CPPFLAGS) \
-    $(LIBXML2_CFLAGS)
+    $(LIBXML2_CFLAGS) \
+    @LIBCURL_CPPFLAGS@
 
 # global linker flags
 AM_LDFLAGS = $(BOOST_UNIT_TEST_FRAMEWORK_LDFLAGS)
 
 # global libs
-LIBS = $(BOOST_UNIT_TEST_FRAMEWORK_LIBS) $(LIBXML2_LIBS) $(DLVHEX_LIBS)
+LIBS = $(BOOST_UNIT_TEST_FRAMEWORK_LIBS) $(LIBXML2_LIBS) @LIBCURL@ $(DLVHEX_LIBS)
 
 TESTS = xpath-unittest \
         tests/run-dlvhex-tests.sh
-        
+
 TESTS_ENVIRONMENT = TOPSRCDIR=$(top_srcdir) TOPBUILDDIR=$(top_builddir) BOOST_TEST_LOG_LEVEL=all BOOST_TEST_SHOW_PROGRESS=yes
 
 check_PROGRAMS = xpath-unittest
