moving libcurl flags to the end

--- a/testsuite/Makefile.am
+++ b/testsuite/Makefile.am
@@ -14,7 +14,7 @@ AM_CPPFLAGS = \
 AM_LDFLAGS = $(BOOST_UNIT_TEST_FRAMEWORK_LDFLAGS)
 
 # global libs
-LIBS = $(BOOST_UNIT_TEST_FRAMEWORK_LIBS) $(LIBXML2_LIBS) @LIBCURL@ $(DLVHEX_LIBS)
+LIBS = $(BOOST_UNIT_TEST_FRAMEWORK_LIBS) $(LIBXML2_LIBS) $(DLVHEX_LIBS) @LIBCURL@
 
 TESTS = \
 	xpath-unittest \
